--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -408,6 +408,8 @@
     .badge {
       position: relative;
       top: -2px;
+      padding: 3px 6px;
+      background-color: #000;
     }
   }
 }
