Update main menu functionality with some crazy javascript.

--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
@@ -62,6 +62,7 @@
           {{ product.field_brand }}
           <h1 class="page-title">{{ product_entity.title.value }}</h1>
           {{ product.variation_price }}
+          {{ product.variation_sale_price }}
           {{ product.field_short_description }}
           {{ product.variations }}
         </div>
