--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -1,7 +1,86 @@
 /**
+ * Product page sorting.
+ */
+#block-items-per-page {
+  margin: 15px 0 50px;
+  text-align: right;
+
+  .form-item {
+    float: none;
+    display: inline-block;
+    margin: 0 15px 0 0;
+
+    label {
+      margin: 0 5px 5px;
+      font-weight: normal;
+    }
+
+    .form-optional {
+      display: none;
+    }
+
+    .select-wrapper {
+      display: inline-block;
+
+      select {
+        padding: 0 3px;
+        height: 22px;
+        border-radius: 0;
+      }
+    }
+
+    @media (max-width: $screen-sm-max) {
+      display: block;
+      margin: 0 0 2px;
+
+      label {
+        font-size: 14px;
+        font-weight: 600;
+      }
+
+      select {
+        width: 120px;
+      }
+    }
+  }
+
+  .form-actions {
+    clear: none;
+    display: inline-block;
+    margin: 0;
+
+    input {
+      padding: 3px 10px;
+      font-size: 14px;
+      font-weight: 600;
+      text-transform: uppercase;
+    }
+  }
+
+    // Hide some elements.
+  .form-item-filter {
+    display: none;
+  }
+}
+
+#block-commerce-2-demo-mainpagecontent .view-products {
+  .view-header {
+    position: absolute;
+    top: -77px;
+    font-size: 14px;
+
+    @media (max-width: $screen-sm-max) {
+      position: relative;
+      top: -20px;
+      width: 100%;
+      text-align: right;
+    }
+  }
+}
+
+/**
  * Product teaser.
  */
-
 .recommended-products,
 .view-products,
 .view-featured-products {
