--- a/web/themes/custom/commerce_2_demo/sass/custom/style.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/style.scss
@@ -19,6 +19,7 @@
 @import 'pages/blog';
 @import 'pages/product';
 @import 'pages/checkout';
+@import 'pages/user';
 
 // Live CSS.
 @import 'live_css';
