--- a/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
@@ -207,8 +207,9 @@
     padding: 33px 30px 21px;
     margin: 0;
     background: #000;
-    font-size: 26px;
+    font-size: 25px;
     font-weight: 600;
+    letter-spacing: 0.04em;
     text-transform: uppercase;
     color: #fff;
 
