Update product page template for when there are no product images.

--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
@@ -53,14 +53,20 @@
     </div>
 
     <div class="row">
-      {# Product images. #}
-      <div class="col-sm-12 col-md-6">
-        {{ product.variation_field_image }}
-      </div>
+      {% if product_image_full_url %}
+        {# Product images. #}
+        <div class="col-sm-12 col-md-6">
+          {{ product.variation_field_image }}
+        </div>
+        {# Product intro (w/ product image). #}
+        <div class="col-sm-12 col-md-6">
+          <div class="product--intro">
+      {% else %}
+        {# Product intro (w/o product image). #}
+        <div class="col-sm-12">
+          <div class="product--intro product--intro__full-width">
+      {% endif %}
 
-      {# Product intro. #}
-      <div class="col-sm-12 col-md-6">
-        <div class="product--intro">
           {{ product.field_brand }}
           <h1 class="page-title">{{ product_entity.title.value }}</h1>
           {{ product.variation_price }}
