--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -404,6 +404,10 @@
       padding: 0;
     }
 
+    &.product--intro__full-width {
+      padding: 0;
+    }
+
     .field--name-field-brand {
       .field__item {
         display: inline-block;
