Hide required * from product size attirbute label.

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -476,7 +476,8 @@
         }
       }
 
-      .form-item-purchased-entity-0-attributes-attribute-straw-color .form-required {
+      .form-item-purchased-entity-0-attributes-attribute-straw-color .form-required,
+      .form-item-purchased-entity-0-attributes-attribute-size .form-required {
         display: none;
       }
 
