Better descriptions and information for guided tour example.

--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
@@ -56,7 +56,9 @@
       {% if product_image_full_url %}
         {# Product images. #}
         <div class="col-sm-12 col-md-6">
-          {{ product.variation_field_image }}
+          <div class="product--images">
+            {{ product.variation_field_image }}
+          </div>
         </div>
         {# Product intro (w/ product image). #}
         <div class="col-sm-12 col-md-6">
