--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -94,9 +94,9 @@
           </div>
         </div>
 
-        <div class="col-xs-12 col-sm-2">
+        <div class="col-xs-12 col-sm-2 text-right">
           {# Button trigger modal #}
-          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#siteTours">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#siteTours">
             Tours
           </button>
         </div>
@@ -112,10 +112,11 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="siteToursLabel">Commerce Demo Tours</h4>
+        <h4 class="modal-title" id="siteToursLabel">Drupal Commerce Tours</h4>
       </div>
       <div class="modal-body">
-        <button type="button" class="btn btn-primary" id="tourExample">Intro.js Tour Example</button>
+        <p>Select a Drupal Commerce site tour below!</p>
+        <button type="button" class="btn btn-primary" id="productPageTour">Product Page</button>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
